src/styles.css
*:before, *, *:after{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1{
    font-size: 2rem;
}
h2{
    font-size: 1.8rem;
}
h1,h2{
    margin: 1em;
}
ul{
    margin:1em;
}
li{
    margin: 10px;
    font-size: 1.5rem;
    list-style-type:none;
}
img{
    max-width: 100%;
    height: auto;
}

body{
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
}

.container{
    width: 100vw;
    height: 100vh;
    height: 100dvh;
}
.header img{
    max-width: 5rem;
    margin-left: 1.2em;
}
.header h1{
    margin-left: 12px;
}
.header{
    padding: 4px 0;
    width: 100%;
    background-color: rgb(211, 211, 213);
    display: flex;
    align-items: center;
    font-family: "Alfa Slab One", serif;
    font-weight: 400;
    font-style: normal;
}

.sidebar{
    word-wrap: break-word;
    overflow-wrap: break-word;
    white-space: normal;
    
}


.main{ 
    width: 100vw;
    height:100%;
    display: grid;
    grid-template-columns: 300px 1fr;
}
.content{
    background-color: pink;
}

